# DexRewrite

./: CMakeLists.txt  baserepair.cpp  baserepair.h  library.cpp  library.h  main.cpp  readme.md  repairdex.cpp  repairdex.h
include/base/: align.h  array_ref.h  bit_utils.h  cxx_helper.h  enums.h  logging.h  macros.h  offsets.h  singleton.h
include/dex/: dex_container.h  dex_file.h  dex_instruction.h  dex_instruction_iterator.h  dex_ir.h  dex_ir_annotation.h  dex_ir_builder.h  dex_ir_callsiteid.h  dex_ir_catchHandler_iterator.h  dex_ir_catchhandler.h  dex_ir_classdata.h  dex_ir_classdef.h  dex_ir_code_item.h  dex_ir_codeitemdata.h  dex_ir_collectionbase.h  dex_ir_collectionmap.h  dex_ir_collections.h  dex_ir_collectionvector.h  dex_ir_debuginfo_item.h  dex_ir_fieid_item.h  dex_ir_fieldid.h  dex_ir_header.h  dex_ir_indexed_collection_vector.h  dex_ir_item.h  dex_ir_maplist.h  dex_ir_method_item.h  dex_ir_methodhandle_item.h  dex_ir_methodid.h  dex_ir_protoid.h  dex_ir_stringdata.h  dex_ir_stringid.h  dex_ir_try_item.h  dex_ir_typeaddr_pair.h  dex_ir_typeid.h  dex_ir_typelist.h  dex_ir_util.h  dex_ir_writer.h  dex_modifiers.h  dex_stringpiece.h  dex_types.h  (+3 more)
include/util/: fd_file.h  memory_scan.h  porccess_status.h  random_access_file.h
src/libdex/: code_item_accessors.cpp  code_item_accessors.h  dex_container.cpp  dex_file.cpp  dex_file_exception_helpers.cpp  dex_file_exception_helpers.h  dex_instruction.cpp  dex_instruction_iterator.cpp  dex_ir_builder.cpp  dex_ir_callsiteid.cpp  dex_ir_catchhandler.cpp  dex_ir_classdata.cpp  dex_ir_classdef.cpp  dex_ir_codeitem.cpp  (+19 more)
(+3 files in other folders)
